0. Сортировка [#10096 #195944]